# Fast-API-demo

./: Dockerfile  README.md  compose.yaml  pyproject.toml
api/: main.py
static/: app.js
templates/: index.html
